--- a/css/mobile.css
+++ b/css/mobile.css
@@ -3,10 +3,17 @@
 
 	html { font-size: 24px; }
 
-	/* ======== section  ======== */
-	/* ======== section  ======== */
-	/* ======== section  ======== */
-	/* ======== section  ======== */
+/* ======== Global Header  ======== */
+
+/* ======== Banner  ======== */
+
+/* ======== Intro Section  ======== */
+
+/* ======== How it Works  ======== */
+
+/* ======== About Section  ======== */
+
+/* ======== In Season Section  ======== */
 
 
 }
@@ -16,10 +23,17 @@
 
 	html { font-size: 18px; }
 
-	/* ======== section  ======== */
-	/* ======== section  ======== */
-	/* ======== section  ======== */
-	/* ======== section  ======== */
+/* ======== Global Header  ======== */
+
+/* ======== Banner  ======== */
+
+/* ======== Intro Section  ======== */
+
+/* ======== How it Works  ======== */
+
+/* ======== About Section  ======== */
+
+/* ======== In Season Section  ======== */
 
 
 }
