--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,10 @@ body {
 	overflow-x:hidden;
 }
 
+.container.form {
+	background:#fff;
+}
+
 /* ======== sections  ======== */
 
 .section {
@@ -58,6 +62,12 @@ body {
 	.global-header.inverted {
 		background:#FD775B;
 		color:#fff;
+	}
+
+	.global-header.mod-unfixed {
+		position:relative;
+		transition:none;
+		padding-top:1rem;
 	}
 
 	.global-header-links {
@@ -199,9 +209,49 @@ body {
 
 .slider {
 	margin:2rem 0;
-	border:solid red 1px;
 }
 
+.slider-box {
+	margin:2rem 0;
+	padding:1rem 0;
+	width:25%;
+}
+
+	.slider-box-title {
+		font-weight:600;
+		font-size:1.15rem;
+		margin-bottom:1.5rem;
+		text-align:center;
+	}
+
+	.slider-box-img {
+		background:url('') #ccc no-repeat center center;
+		background-size:cover;
+		border-radius:2px;
+		width:100%;
+		max-width:200px;
+		height:200px;
+		border:dotted #ccc 1px;
+		margin:0 auto;
+	}
+
+	.slider-box-link {
+		display:table;
+		margin:1.5rem auto 0 auto;
+	}
+
+	.slider-arrow { 
+		display: flex; 
+		align-items:center; 
+		padding:0 1rem; 
+		color:#85dd60; 
+		font-size:2.5rem; 
+		cursor: pointer;
+		display: none; /*show arrows when this becomes a slider*/ 
+	}
+	.slider-arrow:hover,
+	.slider-arrow:active,
+	.slider-arrow:focus { color:#6db74e; }
 
 /* ======== coming-soon ======== */
 
@@ -212,6 +262,11 @@ body {
 .banner-title.coming-soon {
 	color:#4A4A4A;
 }
+
+/* ======== SignUp/LogIn Form  ======== */
+
+.form-fields {width:100%;}
+
 
 /* ======== Footer  ======== */
 
