--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,11 @@ body {
 		border-radius:50%;
 	}
 
+	.info-box-img1 {background-image:url('../img/crate.jpg')},
+	.info-box-img2 {background-image:url('../img/prep.jpg')},
+	.info-box-img3 {background-image:url()}
+
+
 	.info-box-title {
 		font-weight:600;
 		text-align:center;
@@ -212,6 +217,10 @@ body {
 		height:200px;
 		border:dotted #ccc 1px;
 	}
+
+	.how-box-img:nth-of-type(1) { background-image:url('../img/crate.jpg') }
+	.how-box-img:nth-of-type(2) { background-image:url('../img/crate.jpg') }
+	.how-box-img:nth-of-type(1) { background-image:url('../img/crate.jpg') }
 
 	.how-box-content {
 		width:50%;
